--- a/csm/email/Email_Forgot_Temp.html
+++ b/csm/email/Email_Forgot_Temp.html
@@ -1,32 +1,32 @@
 <html>
     <head>
-        <title>www.sbobetsexy.com : Asian handicap betting Sport betting</title>
+        <title>CSM</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div> 
-            Dear user 01
+            Dear &to;
         </div>
         <br/>
         <div> 
-             &nbsp;&nbsp;&nbsp;&nbsp;Information for login <a href="http://www.sbobetsexy.com/app/nagieos/" >MANAGEMENT SBOBETSEXY.COM</a>
+            &nbsp;&nbsp;&nbsp;&nbsp;Information for login <a href="https://www.horgarage.com/csm/" >CAR SYSTEM MANAGEMENT</a>
             <br/>
             <br/>
-            &nbsp;&nbsp;&nbsp;&nbsp;Username : user
+            &nbsp;&nbsp;&nbsp;&nbsp;Username : &username;
             <br/>
-            &nbsp;&nbsp;&nbsp;&nbsp;Password&nbsp; : 1111
+            &nbsp;&nbsp;&nbsp;&nbsp;Password&nbsp; : &password;
 
         </div>
         <div>&nbsp;</div>
         <div> 
             <table>
                 <tr>
-                    <td> <img src="../images/logo/logo.png" style="width: 50px;height: 50px"></td>
+                    <td> <img src="../images/logo/logo.jpg" style="width: 50px;height: 50px"></td>
                     <td style="vertical-align: center; font-weight: bold; font-size:small"> 
-                        © SBOBETSEXY 2017 | www.sbobetsexy.com : Asian handicap betting Sport betting
+                        Copyright © 2017 HORGARAGE All rights reserved.
                         <br/>
-                        Line : @sbosexy  , Email : info@sbobetsexy.com
+                        Email : info@horgarage.com
                     </td>
                 </tr>
             </table>
