--- a/csm/email/Email_Temp.html
+++ b/csm/email/Email_Temp.html
@@ -13,11 +13,11 @@
         <div> 
             <table>
                 <tr>
-                    <td> <img src="../images/logo/logo.png" style="width: 50px;height: 50px"></td>
+                    <td> <img src="../images/logo/logo.jpg" style="width: 50px;height: 50px"></td>
                     <td style="vertical-align: center; font-weight: bold; font-size:small"> 
-                        © SBOBETSEXY 2017 | www.sbobetsexy.com : Asian handicap betting Sport betting
+                        Copyright © 2017 HORGARAGE All rights reserved.
                         <br/>
-                        Line : @sbosexy  , Email : info@sbobetsexy.com
+                        Email : info@horgarage.com
                     </td>
                 </tr>
             </table>
