--- a/csm/email/Email.html
+++ b/csm/email/Email.html
@@ -1,9 +1,9 @@
 <html>
     <head>
-        <title>NAGIEOS</title>
+        <title>CSM</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
+    </head> 
     <body>
         <div> 
             &detail;
@@ -12,11 +12,11 @@
         <div> 
             <table>
                 <tr>
-                    <td> <img src="../images/logo/logo.png" style="width: 50px;height: 50px"></td>
+                    <td> <img src="../images/logo/logo.jpg" style="width: 50px;height: 50px"></td>
                     <td style="vertical-align: center; font-weight: bold; font-size:small"> 
-                        © NAGIEOS 2017 | www.nagieos.com
+                        Copyright © 2017 HORGARAGE All rights reserved.
                         <br/>
-                        Line : NAGIEOS  , Email : info@nagieos.com
+                        Email : info@horgarage.com
                     </td>
                 </tr>
             </table>
