--- a/csm/email/Email_Forgot.html
+++ b/csm/email/Email_Forgot.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>NAGIEOS</title>
+        <title>CSM</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
@@ -10,7 +10,7 @@
         </div>
         <br/>
         <div> 
-            &nbsp;&nbsp;&nbsp;&nbsp;Information for login <a href="http://www.expwebdesign.com/demo/app/exp/" >BET SYSTEM MANAGEMENT</a>
+            &nbsp;&nbsp;&nbsp;&nbsp;Information for login <a href="https://www.horgarage.com/csm/" >CAR SYSTEM MANAGEMENT</a>
             <br/>
             <br/>
             &nbsp;&nbsp;&nbsp;&nbsp;Username : &username;
@@ -22,11 +22,11 @@
         <div> 
             <table>
                 <tr>
-                    <td> <img src="../images/logo/logo.png" style="width: 50px;height: 50px"></td>
+                    <td> <img src="../images/logo/logo.jpg" style="width: 50px;height: 50px"></td>
                     <td style="vertical-align: center; font-weight: bold; font-size:small"> 
-                        © NAGIEOS 2017 | www.nagieos.com
+                        Copyright © 2017 HORGARAGE All rights reserved.
                         <br/>
-                        Line : NAGIEOS  , Email : info@nagieos.com
+                        Email : info@horgarage.com
                     </td>
                 </tr>
             </table>
