--- a/csm/email/Email_Register_Temp.html
+++ b/csm/email/Email_Register_Temp.html
@@ -1,32 +1,32 @@
 <html>
     <head>
-        <title>www.nagieos.com : Asian handicap betting Sport betting</title>
+        <title>CSM</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div> 
-            Dear test 2 test 
+            Dear &to;
         </div>
         <br/>
         <div> 
             &nbsp;&nbsp;&nbsp;&nbsp;Information for Login
             <br/>
             <br/>
-            &nbsp;&nbsp;&nbsp;&nbsp;Username : test
+            &nbsp;&nbsp;&nbsp;&nbsp;Username : &username;
             <br/>
-            &nbsp;&nbsp;&nbsp;&nbsp;Password&nbsp; : 1313213
+            &nbsp;&nbsp;&nbsp;&nbsp;Password&nbsp; : &password;
 
         </div>
         <div>&nbsp;</div>
         <div> 
             <table>
                 <tr>
-                    <td> <img src="../images/logo/logo.png" style="width: 50px;height: 50px"></td>
+                    <td> <img src="../images/logo/logo.jpg" style="width: 50px;height: 50px"></td>
                     <td style="vertical-align: center; font-weight: bold; font-size:small"> 
-                        © NAGIEOS 2017 | www.nagieos.com
+                        Copyright © 2017 HORGARAGE All rights reserved.
                         <br/>
-                        Line : NAGIEOS  , Email : info@nagieos.com
+                        Email : info@horgarage.com
                     </td>
                 </tr>
             </table>
