--- a/csm/email/Email_Forgot.html
+++ b/csm/email/Email_Forgot.html
@@ -6,16 +6,16 @@
     </head>
     <body>
         <div> 
-            Dear &to;
+            <strong>Dear</strong> &to;
         </div>
         <br/>
         <div> 
-            &nbsp;&nbsp;&nbsp;&nbsp;Information for login <a href="https://www.horgarage.com/csm/" >CAR SYSTEM MANAGEMENT</a>
+            &nbsp;&nbsp;&nbsp;&nbsp;<strong>Information for login</strong> <a href="https://www.horgarage.com/csm/" >CAR SYSTEM MANAGEMENT</a>
             <br/>
             <br/>
-            &nbsp;&nbsp;&nbsp;&nbsp;Username : &username;
+            &nbsp;&nbsp;&nbsp;&nbsp;<strong>Username</strong> : &username;
             <br/>
-            &nbsp;&nbsp;&nbsp;&nbsp;Password&nbsp; : &password;
+            &nbsp;&nbsp;&nbsp;&nbsp;<strong>Password</strong>&nbsp; : &password;
 
         </div>
         <div>&nbsp;</div>
